--- a/blocks/edit-frm/__save-btn/edit-frm__save-btn.css
+++ b/blocks/edit-frm/__save-btn/edit-frm__save-btn.css
@@ -10,7 +10,7 @@
   color: #FFFFFF;
   width: 100%;
   height: 50px;
-  margin-top: 25px;
+  margin-top: 0;
   transition: opacity .3s;
 }
 
