--- a/blocks/edit-frm/edit-frm.css
+++ b/blocks/edit-frm/edit-frm.css
@@ -1,6 +1,6 @@
 .edit-frm {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: auto auto 40px auto 40px auto;
+  grid-template-rows: auto auto 30px auto 48px auto;
 
 }
